[gd_scene load_steps=2 format=3 uid="uid://c0ml85chbvhtn"]

[ext_resource type="Script" path="res://Hit and Hurt/hurtbox.gd" id="1_e7a7m"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_e7a7m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="invincibility_ended" from="." to="." method="_on_invincibility_ended"]
[connection signal="invincibility_start" from="." to="." method="_on_invincibility_start"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
